# MASA-CUDAlign

./: README.md
masa-cudalign-3.9.1.1024/: ChangeLog  Makefile.am  Makefile.in  TODO  configure  configure.ac
masa-cudalign-3.9.1.1024/libs/masa-core/: Makefile.am  Makefile.in  README  configure  configure.ac
masa-cudalign-3.9.1.1024/libs/masa-core/doxygen/: bibtex.bib
masa-cudalign-3.9.1.1024/libs/masa-core/doxygen/pages/: mainpage.dox
masa-cudalign-3.9.1.1024/libs/masa-core/src/: config.h.in
masa-cudalign-3.9.1.1024/libs/masa-core/src/common/: AlignerManager.cpp  AlignerManager.hpp  AlignerPool.cpp  BestScoreList.cpp  BlocksFile.hpp  CrosspointsFile.cpp  CrosspointsFile.hpp  Job.cpp  Job.hpp  Properties.cpp  RecurrentTimer.cpp  SpecialRowReader.hpp  SpecialRowWriter.cpp  SpecialRowWriter.hpp  Status.cpp  utils.cpp  utils.hpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/common/biology/: AlignmentBinaryFile.cpp  Sequence.cpp  SequenceInfo.cpp  SequenceModifiers.cpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/common/configs/: ConfigParser.hpp  Configs.cpp  Configs.hpp  default.cfg
masa-cudalign-3.9.1.1024/libs/masa-core/src/common/exceptions/: IOException.hpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/common/io/: BufferLogger.cpp  BufferLogger.hpp  BufferedCellsWriter.cpp  BufferedCellsWriter.hpp  CellsReader.hpp  CellsWriter.hpp  DummyCellsReader.cpp  FileCellsWriter.cpp  FileCellsWriter.hpp  FileStream.cpp  FileStream.hpp  InitialCellsReader.cpp  ReversedCellsReader.cpp  ReversedCellsReader.hpp  SeekableCellsReader.hpp  SocketCellsWriter.cpp  SplitCellsReader.cpp  URLCellsWriter.hpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/common/sra/: FirstRow.hpp  SpecialRow.cpp  SpecialRowsArea.hpp  SpecialRowsPartition.cpp  SpecialRowsPartition.hpp  sra.hpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/libmasa/: Grid.cpp  IAligner.hpp  IManager.hpp  Partition.hpp  libmasa.cpp  libmasa.hpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/libmasa/aligners/: AbstractAligner.cpp  AbstractAligner.hpp  AbstractAlignerSafe.hpp  AbstractBlockAligner.cpp  AbstractDiagonalAligner.cpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/libmasa/parameters/: AbstractAlignerParameters.hpp  BlockAlignerParameters.hpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/libmasa/processors/: AbstractBlockProcessor.cpp  AbstractBlockProcessor.hpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/libmasa/pruning/: AbstractBlockPruning.hpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/libmasa/utils/: AlignerUtils.cpp  AlignerUtils.hpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/masanet/: MasaNet.cpp  MasaNet.hpp  MasaNetStatus.cpp  Peer.cpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/masanet/command/: CmdCreateRing.cpp  CmdDiscover.cpp  CmdDiscover.hpp  CmdJoin.cpp  CmdNotifyScore.hpp  CmdPeerList.cpp  CmdPeerList.hpp  CmdPeerResponse.cpp  CmdStatusRequest.cpp  CmdStatusResponse.hpp  CmdTestRing.hpp  CmdUndiscover.cpp  CmdUndiscover.hpp  Command.hpp
masa-cudalign-3.9.1.1024/libs/masa-core/src/stage1/: sw_stage1.h
masa-cudalign-3.9.1.1024/libs/masa-core/src/stage4/: sw_stage4.cpp  sw_stage4.h
masa-cudalign-3.9.1.1024/src/: CUDAligner.cpp  CUDAligner.cu  CUDAligner.hpp  CUDAlignerParameters.cpp  cuda_util.cpp
masa-cudalign-4.0.2.1028/: ChangeLog  Makefile.in  README  configure  configure.ac
masa-cudalign-4.0.2.1028/libs/masa-core/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  configure  configure.ac
masa-cudalign-4.0.2.1028/libs/masa-core/doxygen/: DoxygenLayout.xml  index.html  masa-core.doxyfile
masa-cudalign-4.0.2.1028/libs/masa-core/src/common/: AlignerManager.cpp  AlignerPool.hpp  BestScoreList.hpp  BlocksFile.cpp  Common.hpp  Crosspoint.hpp  Job.hpp  Properties.hpp  RecurrentTimer.hpp  SpecialRowReader.cpp  Status.hpp  Timer.cpp  Timer.hpp  macros.hpp
masa-cudalign-4.0.2.1028/libs/masa-core/src/common/biology/: Alignment.cpp  Alignment.hpp  AlignmentBinaryFile.hpp  AlignmentParams.cpp  AlignmentParams.hpp  Constants.hpp  Sequence.hpp  SequenceData.cpp  SequenceData.hpp  SequenceInfo.hpp  SequenceModifiers.hpp  biology.hpp
masa-cudalign-4.0.2.1028/libs/masa-core/src/common/configs/: ConfigParser.cpp
masa-cudalign-4.0.2.1028/libs/masa-core/src/common/exceptions/: IOException.cpp  IllegalArgumentException.cpp  IllegalArgumentException.hpp  exceptions.hpp
masa-cudalign-4.0.2.1028/libs/masa-core/src/common/io/: Buffer2.cpp  Buffer2.hpp  BufferedCellsReader.cpp  BufferedCellsReader.hpp  BufferedStream.cpp  BufferedStream.hpp  DummyCellsReader.hpp  DummyCellsWriter.cpp  DummyCellsWriter.hpp  FileCellsReader.cpp  FileCellsReader.hpp  InitialCellsReader.hpp  SocketCellsReader.cpp  SocketCellsReader.hpp  SocketCellsWriter.hpp  SplitCellsReader.hpp  TeeCellsReader.cpp  TeeCellsReader.hpp  URLCellsReader.cpp  URLCellsReader.hpp  URLCellsWriter.cpp
masa-cudalign-4.0.2.1028/libs/masa-core/src/common/sra/: FirstRow.cpp  SpecialRow.hpp  SpecialRowFile.cpp  SpecialRowFile.hpp  SpecialRowRAM.cpp  SpecialRowRAM.hpp  SpecialRowsArea.cpp
masa-cudalign-4.0.2.1028/libs/masa-core/src/libmasa/: Grid.hpp  IAlignerParameter.hpp  Partition.cpp  capabilities.hpp  libmasa.cpp  libmasa.hpp  libmasaTypes.hpp
masa-cudalign-4.0.2.1028/libs/masa-core/src/libmasa/aligners/: AbstractAlignerSafe.cpp  AbstractBlockAligner.hpp  AbstractDiagonalAligner.hpp
masa-cudalign-4.0.2.1028/libs/masa-core/src/masanet/: MasaNetCLI.hpp  MasaNetCallbacks.hpp  MasaNetStatus.hpp  Peer.hpp  PeerList.cpp  PeerList.hpp
masa-cudalign-4.0.2.1028/libs/masa-core/src/stage1/: sw_stage1.cpp
masa-cudalign-4.0.2.1028/libs/masa-core/src/stage2/: sw_stage2.cpp  sw_stage2.h
masa-cudalign-4.0.2.1028/libs/masa-core/src/stage3/: sw_stage3.cpp  sw_stage3.h
masa-cudalign-4.0.2.1028/libs/masa-core/src/stage4/: sw_stage4.cpp
masa-cudalign-4.0.2.1028/libs/masa-core/src/stage5/: sw_stage5.cpp  sw_stage5.h
masa-cudalign-4.0.2.1028/libs/masa-core/src/stage6/: sw_stage6.cpp  sw_stage6.h
masa-cudalign-4.0.2.1028/src/: CUDAligner.cpp  CUDAligner.cu  CUDAlignerParameters.hpp  config.h.in  cuda_util.h  main.cpp
(+21 files in other folders)
